--- a/assets/style.css
+++ b/assets/style.css
@@ -1,40 +1,79 @@
 .crisp-wrap {
+  font-family: Arial, Helvetica, sans-serif;
+  -webkit-font-smoothing: antialiased;
   position:absolute;
+  text-align: center;
   width: 100%;
   height: 100%;
 }
 
 .crisp-modal {
-  background: #fff;
-  padding: 50px;
-  border: 1px solid #cccccc;
-  max-width: 550px;
-  margin-top:200px;
-  margin-left: auto;
-  margin-right: auto;
+  background-color: #fff;
+  border: 1px solid #e8e8e8;
+  width: 66.13%;
+  max-width: 540px;
+  margin: 45px auto 2rem;
+  padding: 2rem 2rem 1.5rem;
+  border-radius: .25rem;
+  box-shadow: 0 1px 0 rgba(0,0,0,.25);
+}
+
+.crisp-modal .crisp-button {
+  border: 0 none;
+  font-weight: bold;
   text-align: center;
-  box-shadow: 0 2px 1px 0 #e6e5e5;
-  border-radius: 2px;
-}
-
-.crisp-span {
-  font-size: 18px;
-}
-
-.crisp-sign {
-  margin-top: 25px;
-}
-
-.crisp-check {
-  clear: both;
+  text-decoration: none;
+  padding: 14px 30px 15px;
+  cursor: pointer;
+  display: inline-block;
+  border-radius: .25rem;
+  width: 200px;
   display: block;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 25px;
+  margin-bottom: 12px;
 }
 
-.crisp-retry {
-  margin-top: 20px;
-  font-size: 18px;
-  display: block;
+.crisp-modal .crisp-button..crisp-success {
+  color: #fff;
+  background: #2ab27b;
+  text-shadow: 0 1px 1px rgba(0,0,0,.1);
+}
+
+.crisp-modal .crisp-button.crisp {
+  color: #fff;
+  background: #308AD6;
+  text-shadow: 0 1px 1px rgba(0,0,0,.1);
+}
+
+.crisp-modal .crisp-button.crisp-neutral, .crisp-modal .crisp-button.crisp-error {
+  color: #555459;
+  border: 1px solid #C7CACD;
+  background: #fbfbfa;
+}
+
+.crisp-title {
+  color: #555459;
+  font-size: 22px;
+  font-weight: bold;
+  margin: 0;
+}
+
+.crisp-subtitle {
+  color: #555459;
+  font-size: 16px;
+  font-weight: normal;
+  margin: 12px 0 26px;
+}
+
+.crisp-subtitle {
+  color: #555459;
+  font-size: 16px;
+  font-weight: normal;
+  margin: 12px 0 26px;
+}
+
+.crisp-notice {
+  font-size: 14px;
+  margin: 12px 0 26px;
 }
